--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 
     <!-- student feedback section  -->
     <section id="feedback">
+        <p>Feedback form </p>
         <form action="/" method="post" autocomplete="on">
             <fieldset>
                 <legend>Student information </legend>
