--- a/index.html
+++ b/index.html
@@ -117,10 +117,11 @@
         <h2>Listen to HTML Tips</h2>
         <audio src=""></audio>
     </section>
+    <hr>
 
     <!-- student feedback section  -->
     <section id="feedback">
-        <p>Feedback form </p>
+        <h2>Feedback form </h2>
         <form action="/" method="post" autocomplete="on">
             <fieldset>
                 <legend>Student information </legend>
